--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -3,8 +3,7 @@
     <article>
         <header>
             <h1>Shenzhen Finance Institute,The Chinese University of Hong Kong(SZ)</h1>
-            <h1>Research Assistant</h1>
-            <h1>Under supervised by Prof. ZHANG Tianyu</h1>
+            <h1>Research Assistant under supervised by Prof. ZHANG Tianyu</h1>
             <span><address>Shenzhen,China </address><time>Sept. 2017 to present </time></span>
         </header>
         <li>Distribute Information Collection and Analysis Platform
