--- a/_includes/profession.html
+++ b/_includes/profession.html
@@ -3,13 +3,13 @@
     <article>
         <header>
             <h1>Distrubute Information Collection and Analysis Platform</h1>
-            <span><address>Shenzhen Finance Institute,CUHK(SZ)</address><time>2017</time></span>
+            <span><address>Shenzhen Finance Institute,CUHK(SZ)</address><time>2017-Present</time></span>
         </header>
         <p>
-        Distribute Information Collection and Analysis Platform is a distributed web crawling system that collects social network information and analyzes the public sentiment. I am responsible for designing and implementing whole data pipeline including web crawling, data bus design, data warehouse design and software provisioning.
+        Distribute Information Collection and Analysis Platform collects social network information and analyzes the public sentiment. I am responsible for designing and implementing whole data pipeline including web crawling, data bus design, data warehouse design and software provisioning.
         </p>
         <li>
-            Frameworks: Scrapy Cluster ,Spark Streaming, Kafka, Redis, Zookeeper, Logstash, Elasticsearch
+            Frameworks: Scrapy Cluster, Spark Streaming, Kafka, Redis, Zookeeper, Logstash, Elasticsearch, mysql
             </li>
         <li>
             The crawler can automatically login the website, retain the login session, parse the webpage content and crawl incrementally. 
