--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -35,7 +35,7 @@
         </li>
         <li>Container log collection and analysis workflow based on ElasticSearch, Fluentd, Kibana
         </li>
-        <li>CI/CD workflow based on Jenkins, mocha and docker
+        <li>CI/CD workflow based on Jenkins and docker
         </li>
         <li>Webank private cloud
         </li>
