--- a/_includes/profession.html
+++ b/_includes/profession.html
@@ -15,7 +15,7 @@
             The crawler can automatically login the website, retain the login session, parse the webpage content and crawl incrementally. 
             </li>
         <li>
-            The system is designed in micro-service fashion and provisioned on the Kubernate cluster. The system takes the advantages from Kubernate and micro-service structure which the crawling node can be scaled up in seconds.
+            The system is designed in micro-service fashion and provisioned on the Kubernetes cluster. The system takes the advantages from Kubernetes and micro-service structure which the crawling node can be scaled up in seconds.
             </li>
         <li>
             Data processing use the state-of-art big data processing frameworks, including Kafka, Elasticsearch, and Spark Streaming. Kafka cluster worked as a data bus store parsed webpage content. Spark streaming consumes the data from the Kafka pipeline and predicts the public sentiment from the social media post. Elasticsearch is mainly responsible for the full-text retrieval.
