--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -31,7 +31,7 @@
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Hive</em>, <em>Pig</em>, <em>Mahout</em>,<em>Hbase</em> ,<em>Kafka</em>
+            &nbsp;&nbsp;<em>Spark</em><em>Hive</em>, <em>Pig</em>, <em>Mahout</em>,<em>Hbase</em> ,<em>Kafka</em>
         </p>
     </article>
     <article>
@@ -44,7 +44,7 @@
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Elastic Search</em>,<em>Redis</em>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>ElasticSearch</em>,<em>Redis</em>
         </p>
     </article>
     <article>
@@ -53,7 +53,7 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;<em>Docker</em>
+            &nbsp;&nbsp;<em>Kubernetes</em><em>Docker</em>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
@@ -66,7 +66,7 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>Kubernates</em>,<em>AWS</em>,<em>Microsoft Azure</em>,<em>Aliyun</em>,<em>Packet(Baremetal cloud service)</em>
+            &nbsp;&nbsp;<em>Kubernetes</em>,<em>Alicloud</em>,<em>AWS</em>,<em>Microsoft Azure</em>,<em>Aliyun</em>,<em>Packet(Baremetal cloud service)</em>
         </p>
     </article>
         <article>
