--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -53,7 +53,7 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;<em>Kubernetes</em><em>Docker</em>
+            &nbsp;&nbsp;<em>Kubernetes</em>,<em>Docker</em>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
