--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -31,7 +31,7 @@
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Spark</em><em>Hive</em>, <em>Pig</em>, <em>Mahout</em>,<em>Hbase</em> ,<em>Kafka</em>
+            &nbsp;&nbsp;<em>Spark</em>,<em>Hive</em>, <em>Pig</em>, <em>Mahout</em>,<em>Hbase</em> ,<em>Kafka</em>
         </p>
     </article>
     <article>
