--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -1,27 +1,30 @@
 <section class="thirteen columns">
-    <h1>Employment</h1>
+    <article>
+        <header>
+            <h1>Oracle Asia R&D-Shenzhen
+</h1>
+            <h1>Senior Software Developer in Global Lifecycle Management
+</h1>
+            <span><address>Shenzhen,China</address><time>Jun. 2018 to Present </time></span>
+        </header>
+        <li>A block-chain based content addressable storage for patching purpose
+        </li>
+        <li>Optimized repository restore process and gain over <colorem>50%</colorem> speed-up
+        </li>
+    </article>
+<article>
     <article>
         <header>
             <h1>Shenzhen Finance Institute,The Chinese University of Hong Kong(SZ)</h1>
             <h1>Research Assistant under supervised by Prof. ZHANG Tianyu</h1>
-            <span><address>Shenzhen,China </address><time>Sept. 2017 to present </time></span>
+            <span><address>Shenzhen,China </address><time>Sept. 2017 to Jun. 2018 </time></span>
         </header>
-        <li>Distribute Information Collection and Analysis Platform
+        <li>Distribute Information Collection and Analysis Platform for Financial Social Network. Data source:guba BBS, Xueqiu, Tencent News, stcn.com...
         </li>
-        <li>Research: How Social Sentiment Influence the Capital Market
+        <li>Process <colorem>16 GB</colorem> streaming data daily and control delay within <colorem>10 mintues</colorem> on <colorem>3 nodes Kubernetes cluster</colorem> and <colorem>3 nodes Spark streaming cluster</colorem>
         </li>
-    </article>
-        <article>
-        <header>
-            <h1>HUA YUXUN Tech Co. Ltd (卖座网)</h1>
-            <h1>Software Developer</h1>
-            <span><address>Shenzhen,China </address><time>June. 2017 to Sept. 2017 </time></span>
-        </header>
-        <li>Big-data processing platform (Recommend system)
+        <li>Research topic: How Social Sentiment Influence the Capital Market
         </li>
-        <li>Design CI/CD pipeline for optimizing software deployment and release workflow
-        </li>
-        <li>Setup automatic integration test system
     </article>
     <article>
         <header>
@@ -31,7 +34,7 @@
 </h1>
             <span><address>Shenzhen,China & Phoenix,USA</address><time>Dec. 2016 to Mar. 2017 </time></span>
         </header>
-        <li>Rancher Flat network project based on SDN (Open source)
+        <li>Rancher Flat network project based on SDN (Open source) (Gain <colorem>99%</colorem> hardware bandwidth)
         </li>
         <li>Container log collection and analysis workflow based on ElasticSearch, Fluentd, Kibana
         </li>
