--- a/_includes/profession.html
+++ b/_includes/profession.html
@@ -6,19 +6,19 @@
             <span><address>Shenzhen Finance Institute,CUHK(SZ)</address><time>2017-Present</time></span>
         </header>
         <p>
-        Distribute Information Collection and Analysis Platform collects social network information and analyzes the public sentiment. I am responsible for designing and implementing whole data pipeline including web crawling, data bus design, data warehouse design and software provisioning.
+        Distribute Information Collection and Analysis Platform collects social network information and analyzes the public sentiment exceed <colorem>industrial quality</colorem>. I am responsible for designing and implementing whole data pipeline including web crawling, data bus design, data warehouse design and cluster provisioning.
         </p>
         <li>
-            Frameworks: Scrapy Cluster, Spark Streaming, Kafka, Redis, Zookeeper, Logstash, Elasticsearch, mysql
+            Frameworks: Scrapy Cluster, <colorem>Spark Streaming, Kafka, Redis, Zookeeper, Logstash, Elasticsearch,</colorem> mysql
             </li>
         <li>
             The crawler can automatically login the website, retain the login session, parse the webpage content and crawl incrementally. 
             </li>
         <li>
-            The system is designed in micro-service fashion and provisioned on the Kubernetes cluster. The system takes the advantages from Kubernetes and micro-service structure which the crawling node can be scaled up in seconds.
+            The system is designed in micro-service fashion and provisioned on the <colorem>Kubernetes cluster</colorem>. The system takes the advantages from Kubernetes and micro-service structure which the crawling node can be scaled up in seconds.
             </li>
         <li>
-            Data processing use the state-of-art big data processing frameworks, including Kafka, Elasticsearch, and Spark Streaming. Kafka cluster worked as a data bus store parsed webpage content. Spark streaming consumes the data from the Kafka pipeline and predicts the public sentiment from the social media post. Elasticsearch is mainly responsible for the full-text retrieval.
+            Data processing use the state-of-art big data processing frameworks, including Kafka, Elasticsearch, and Spark Streaming. Kafka cluster worked as a data bus store parsed webpage content. Spark streaming consumes the data from the Kafka pipeline and predicts the public sentiment from the social media post. Elasticsearch is mainly responsible for the full-text retrieval. The system processes <colorem>16 GB</colorem> streaming data daily and control delay within <colorem>10 mintues</colorem>.
             </li>
     </article>
     <article>
@@ -28,7 +28,7 @@
             Rancher Labs Inc.,Phoenix,USA</address><time>2017</time></span>
         </header>
         <p>
-             Rancher Flat network project based on Container Network Interface, which is a software-defined network. The Flat network plugin implements the IP allocation for the containers and the container network connectivity. The containers , Virtual Machines and baremetal machines can access to each other and they are in the same subnet and network hierachy.
+             (SDN) Rancher Flat network project based on Container Network Interface for Container Cloud, which gain <colorem>99%</colorem> hardware bandwidth. The Flat network plugin implements the IP allocation for the containers and the container network connectivity. The containers , Virtual Machines and baremetal machines can access to each other and they are in the same subnet and network hierachy.
         </p>
         <li>
             Developing tools and language:Golang, Container Network Interface, Linux network namespace
