--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -6,18 +6,18 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>Java</em>,<em>Python</em>
+            &nbsp;&nbsp;<colorem>Java</colorem>,<colorem>Python</colorem>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Golang</em>, <em>Perl</em>,<em>shell</em> &amp; <em>Git</em>
+            &nbsp;&nbsp;<colorem>Golang</colorem>, <colorem>Perl</colorem>,<colorem>shell</colorem> &amp; <colorem>Git</colorem>
         </p>
                 <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Linux Network Namespace</em>
+            &nbsp;&nbsp;<colorem>Linux Network Namespace</colorem>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
+            &nbsp;&nbsp;<colorem>HTML/CSS3</colorem> &amp; <colorem>Javascript</colorem>
         </p>
     </article>
 
@@ -27,11 +27,11 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>web crawler</em>,<em>Hadoop</em>,<em>MapReduce</em>
+            &nbsp;&nbsp;<colorem>web crawler</colorem>,<colorem>Hadoop</colorem>,<colorem>MapReduce</colorem>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Spark</em>,<em>Hive</em>, <em>Pig</em>, <em>Mahout</em>,<em>Hbase</em> ,<em>Kafka</em>
+            &nbsp;&nbsp;<colorem>Spark</colorem>,<colorem>Hive</colorem>, <colorem>Pig</colorem>, <colorem>Mahout</colorem>,<colorem>Hbase</colorem> ,<colorem>Kafka</colorem>
         </p>
     </article>
     <article>
@@ -40,11 +40,15 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;<em>Oracle</em>
+            &nbsp;&nbsp;<colorem>Oracle</colorem>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>ElasticSearch</em>,<em>Redis</em>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<colorem>ElasticSearch</colorem>,<colorem>Redis</colorem>
+        </p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<colorem>Content Addressable Storage</colorem>
         </p>
     </article>
     <article>
@@ -53,11 +57,11 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;<em>Kubernetes</em>,<em>Docker</em>
+            &nbsp;&nbsp;<colorem>Kubernetes</colorem>,<colorem>Docker</colorem>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Jenkins</em>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<colorem>Jenkins</colorem>
         </p>
     </article>
     <article>
@@ -66,7 +70,7 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>Kubernetes</em>,<em>Alicloud</em>,<em>AWS</em>,<em>Microsoft Azure</em>,<em>Aliyun</em>,<em>Packet(Baremetal cloud service)</em>
+            &nbsp;&nbsp;<colorem>Kubernetes</colorem>,<colorem>Alicloud</colorem>,<colorem>AWS</colorem>,<colorem>Microsoft Azure</colorem>,<colorem>Aliyun</colorem>,<colorem>Packet(bare metal cloud service)</colorem>
         </p>
     </article>
         <article>
@@ -75,7 +79,7 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>Excellent communication skills IELTS:  Over band: 6.5</em>
+            &nbsp;&nbsp;<colorem>Excellent communication skills IELTS:  Over band: 6.5</colorem>
         </p>
 
     </article>
