--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -8,9 +8,11 @@
 </h1>
             <span><address>Shenzhen,China</address><time>Jun. 2018 to Present </time></span>
         </header>
-        <li>A block-chain based content addressable storage for patching purpose
+        <li>Refactored the Oracle Patching tool using <colorem>Block-chain</colorem> and <colorem>Content Addressable Storage</colorem> implemented version control feature. Oracle Patching tool supports provisioning, upgrading and patching process on Oracle Cloud.
         </li>
         <li>Optimized repository restore process and gain over <colorem>50%</colorem> speed-up
+        </li>
+        <li>Cooperate with USA team, Mexico team, and India team to support operation team upgrading and patching process. Solve issues and provide workaround solution during the supporting.
         </li>
     </article>
 <article>
@@ -20,9 +22,13 @@
             <h1>Research Assistant under supervised by Prof. ZHANG Tianyu</h1>
             <span><address>Shenzhen,China </address><time>Sept. 2017 to Jun. 2018 </time></span>
         </header>
-        <li>Distribute Information Collection and Analysis Platform for Financial Social Network. Data source:guba BBS, Xueqiu, Tencent News, stcn.com...
+        <li>Distribute Information Collection and Analysis Platform for Financial Social Network. Data source:guba BBS, Xueqiu, Tencent News, stcn.com.
         </li>
-        <li>Process <colorem>16 GB</colorem> streaming data daily and control delay within <colorem>10 mintues</colorem> on <colorem>3 nodes Kubernetes cluster</colorem> and <colorem>3 nodes Spark streaming cluster</colorem>
+        <li>Design and migrate the <colorem>monolithic application</colorem> to a <colorem>distributed cloud application</colorem> on <colorem>Aliyun</colorem>. Process <colorem>16 GB</colorem> streaming data daily and control delay within <colorem>10 minutes</colorem> on <colorem>3 nodes Kubernetes cluster</colorem> and <colorem>3 nodes Spark streaming cluster</colorem>
+        </li>
+        <li>Use word2vector implementing word embedding and construct sentiment prediction model. The prediction model has 0.93 precision for positive sentiment and 0.81 precision for negative sentiment.
+        </li>
+        <li>Use Named Entity Recognition to extract structured information from Personal CV and capital market research report. Construct knowledge graph for listed companies and their stakeholders.
         </li>
         <li>Research topic: How Social Sentiment Influence the Capital Market
         </li>
@@ -35,15 +41,13 @@
 </h1>
             <span><address>Shenzhen,China & Phoenix,USA</address><time>Dec. 2016 to Mar. 2017 </time></span>
         </header>
-        <li>Rancher Flat network project based on SDN (Open source) (Gain <colorem>99%</colorem> hardware bandwidth)
+        <li>(Phoenix,USA office) Rancher Flat network project based on SDN (Open source) (Remain <colorem>99%</colorem> hardware bandwidth)
         </li>
         <li>Container log collection and analysis workflow based on ElasticSearch, Fluentd, Kibana
         </li>
         <li>CI/CD workflow based on Jenkins and docker
         </li>
-        <li>Webank private cloud
-        </li>
-        <li>Hainan Airline group public cloud
+        <li><colorem>High level of customer satisfaction</colorem> HNA Airline public cloud, Webank private cloud
         </li>
 
     </article>
