--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,6 +1,6 @@
 <section class="thirteen columns">
     <h1>Hobbies</h1>
     <article>
-        <p>Swimming,Photography,Windsurfing,Travelling.</p>
+        <p>Swimming,Photography,Windsurfing,Dive.</p>
     </article>
 </section>
