--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,36 +2,54 @@
     <h1>Programming & Communication Skills</h1>
     <article>
         <header>
+            <h1>Cloud Platform</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            &nbsp;&nbsp;<colorem>AWS, Alicloud</colorem>
+        </p>
+    </article>
+    <article>
+        <header>
             <h1>Software engineering</h1>
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<colorem>Java</colorem>,<colorem>Python</colorem>
+            &nbsp;&nbsp;<colorem>Java, Python</colorem>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<colorem>Golang</colorem>, <colorem>Perl</colorem>,<colorem>shell</colorem> &amp; <colorem>Git</colorem>
-        </p>
-                <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<colorem>Linux Network Namespace</colorem>
+            &nbsp;&nbsp;<colorem>Golang(Beego), Perl, shell</colorem> &amp; <colorem>Git</colorem>
         </p>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<colorem>HTML/CSS3</colorem> &amp; <colorem>Javascript</colorem>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<colorem>Restful API, Linux Network Namespace</colorem>
+        </p>
+
+    </article>
+    <article>
+        <header>
+            <h1>CICD</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;<colorem>Kubernetes, Docker</colorem>
+        </p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<colorem>Jenkins, Gradle</colorem>
         </p>
     </article>
-
     <article>
         <header>
             <h1>Big-Data Framework</h1>
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<colorem>web crawler</colorem>,<colorem>Hadoop</colorem>,<colorem>MapReduce</colorem>
+            &nbsp;&nbsp;<colorem>web crawler, Hadoop, MapReduce</colorem>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<colorem>Spark</colorem>,<colorem>Hive</colorem>, <colorem>Pig</colorem>, <colorem>Mahout</colorem>,<colorem>Hbase</colorem> ,<colorem>Kafka</colorem>
+            &nbsp;&nbsp;<colorem>Spark, Hive, Pig, Mahout, Kafka</colorem>
         </p>
     </article>
     <article>
@@ -44,42 +62,26 @@
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<colorem>ElasticSearch</colorem>,<colorem>Redis</colorem>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<colorem>ElasticSearch, Redis</colorem>
         </p>
+    </article>
+    <article>
+        <header>
+            <h1>Storage</h1>
+        </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<colorem>Content Addressable Storage</colorem>
         </p>
     </article>
-    <article>
-        <header>
-            <h1>Testing & CICD</h1>
-        </header>
-        <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;<colorem>Kubernetes</colorem>,<colorem>Docker</colorem>
-        </p>
-        <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<colorem>Jenkins</colorem>
-        </p>
-    </article>
-    <article>
-        <header>
-            <h1>Cloud Platform</h1>
-        </header>
-        <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<colorem>Kubernetes</colorem>,<colorem>Alicloud</colorem>,<colorem>AWS</colorem>,<colorem>Microsoft Azure</colorem>,<colorem>Aliyun</colorem>,<colorem>Packet(bare metal cloud service)</colorem>
-        </p>
-    </article>
+
         <article>
         <header>
             <h1>English</h1>
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<colorem>Excellent communication skills IELTS:  Over band: 6.5</colorem>
+            &nbsp;&nbsp;<colorem>Excellent communication skills. IELTS:  Over band: 6.5</colorem>
         </p>
 
     </article>
