--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -12,6 +12,8 @@
         </li>
         <li>Optimized repository restore process and gain over <colorem>50%</colorem> speed-up
         </li>
+        <li>Lead a scrum team and coordinate with other team
+        </li>
         <li>Cooperate with USA team, Mexico team, and India team to support operation team upgrading and patching process. Solve issues and provide workaround solution during the supporting.
         </li>
     </article>
@@ -26,7 +28,7 @@
         </li>
         <li>Design and migrate the <colorem>monolithic application</colorem> to a <colorem>distributed cloud application</colorem> on <colorem>Aliyun</colorem>. Process <colorem>16 GB</colorem> streaming data daily and control delay within <colorem>10 minutes</colorem> on <colorem>3 nodes Kubernetes cluster</colorem> and <colorem>3 nodes Spark streaming cluster</colorem>
         </li>
-        <li>Use word2vector implementing word embedding and construct sentiment prediction model. The prediction model has 0.93 precision for positive sentiment and 0.81 precision for negative sentiment.
+        <li>Use word2vector implementing word embedding and construct sentiment prediction model. 
         </li>
         <li>Use Named Entity Recognition to extract structured information from Personal CV and capital market research report. Construct knowledge graph for listed companies and their stakeholders.
         </li>
