--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,6 +2,15 @@
     <h1>Programming & Communication Skills</h1>
     <article>
         <header>
+            <h1>Project Management</h1>
+        </header>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            &nbsp;&nbsp;<colorem>PMP Certification #2588937, Scrum with Kanban</colorem>
+        </p>
+    </article>
+    <article>
+        <header>
             <h1>Cloud Platform</h1>
         </header>
         <p>
