--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -12,9 +12,9 @@
         </li>
         <li>Optimized repository restore process and gain over <colorem>50%</colorem> speed-up
         </li>
-        <li>Lead a scrum team and coordinate with other team
+        <li>Lead a scrum team to assess, plan, manage technical aspects of delivery projects
         </li>
-        <li>Cooperate with USA team, Mexico team, and India team to support operation team upgrading and patching process. Solve issues and provide workaround solution during the supporting.
+        <li>Cooperate with USA team, Mexico team, and India team to support operation team on upgrading and patching process. Solve issues and provide workaround solution during the supporting.
         </li>
     </article>
 <article>
