--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -2,17 +2,28 @@
     <h1>Employment</h1>
     <article>
         <header>
+            <h1>PingAn Technology
+            </h1>
+            <h1>Senior Software Developer
+            </h1>
+            <span><address>Shenzhen,China</address><time>Jun. 2019 to Present </time></span>
+        </header>
+        <li>Develop a Kubernetes as a Service with SpringBoot
+        </li>
+        <li>Lead a scrum team to assess, plan, manage technical aspects of delivery projects
+        </li>
+    </article>
+    <article>
+        <header>
             <h1>Oracle Asia R&D-Shenzhen
 </h1>
             <h1>Senior Software Developer in Global Lifecycle Management
 </h1>
-            <span><address>Shenzhen,China</address><time>Jun. 2018 to Present </time></span>
+            <span><address>Shenzhen,China</address><time>Jun. 2018 to May. 2019 </time></span>
         </header>
         <li>Refactored the Oracle Patching tool using <colorem>Block-chain</colorem> and <colorem>Content Addressable Storage</colorem> implemented version control feature. Oracle Patching tool supports provisioning, upgrading and patching process on Oracle Cloud.
         </li>
         <li>Optimized repository restore process and gain over <colorem>50%</colorem> speed-up
-        </li>
-        <li>Lead a scrum team to assess, plan, manage technical aspects of delivery projects
         </li>
         <li>Cooperate with USA team, Mexico team, and India team to support operation team on upgrading and patching process. Solve issues and provide workaround solution during the supporting.
         </li>
@@ -47,7 +58,7 @@
         </li>
         <li>Container log collection and analysis workflow based on ElasticSearch, Fluentd, Kibana
         </li>
-        <li>CI/CD workflow based on Jenkins and docker
+        <li>CI/CD workflow based on Jenkins and docker, run tests on <colorem>AWS</colorem>
         </li>
         <li><colorem>High level of customer satisfaction</colorem> HNA Airline public cloud, Webank private cloud
         </li>
