--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -8,9 +8,9 @@
             </h1>
             <span><address>Shenzhen,China</address><time>Jun. 2019 to Present </time></span>
         </header>
-        <li>Develop a Kubernetes as a Service with SpringBoot
+        <li>Developed a Kubernetes as a Service with SpringBoot
         </li>
-        <li>Lead a scrum team to assess, plan, manage technical aspects of delivery projects
+        <li>Being a Scrum Master in the scrum team to assess, plan, manage technical aspects of delivery projects
         </li>
     </article>
     <article>
